2009-12-23 Lucas M. Schnorr <schnorr@gmail.com>
    * Tracers/JRastro/libRastro/*: using autotools (automake, ...) to create a
      configuration environment for libRastro

2009-10-09 Lucas M. Schnorr <schnorr@gmail.com>
    * PajeSimulator/UserLink.[mh]: new method "key" for UserLink class so other
      objects are allowed to obtain the key used for the link and specified in
      the tracefile

2009-09-23 Lucas M. Schnorr <schnorr@gmail.com>
    * PajeSimulator/PajeSimul+Events.m,PajeSimul.m,SimulContainer.[h|m]:
      changes to make containers keep extra fields when specified in
      PajeCreateContainer events in the trace file. The SimulContainer class
      now has an attribute extraFields and two new methods to intercept
      queries about fields (fieldNames and valueOfFieldnamed:)

2009-05-17  Benhur Stein <benhur@inf.ufsm.br>
    * PajeSimul/SimulContainer.m: create (and use) auxiliary class to keep
      container state in chunks
    * PajeSimulator/PajeSimul: remove userNumberToContainer variable

2009-05-17  Benhur Stein <benhur@inf.ufsm.br>
    * Tracers/JRastro/libRastro/many: cleanup for 64-bit compiling

2008-05-17  Benhur Stein <benhur@inf.ufsm.br>
    * SpaceTimeViewer/DrawView+Drawing.m,HirarchyRuler.m: small changes
      to make it compile and work on windows

2008-04-19  Benhur Stein <benhur@inf.ufsm.br>
    * AggregatingFilter/AggregatingChunkArray.m General/EntityChunk.h
      General/EntityChunk.m PajeEventDecoder/PajeEventDecoder.h
      PajeEventDecoder/PajeEventDecoder.m PajeSimulator/SimulChunk.h
      PajeSimulator/SimulChunk.m: chunk code cleanup

2008-03-07  Benhur Stein <benhur@inf.ufsm.br>
    * General/: correct some #includes

2008-02-21  Benhur Stein <benhur@inf.ufsm.br>
    * SpaceTimeViewer/DrawView.m: register a default size for aggregation

2008-02-21  Benhur Stein <benhur@inf.ufsm.br>
    * Paje/PajeController.m General/NSDate+Additions.m: move locale
      setting to a more global place
